# tencent-ad-optimizer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: example_config.yaml
examples/: demo.py
scripts/: run_optimization.py
src/ad_optimizer/: __init__.py  cli.py  config.py
src/ad_optimizer/agent/: __init__.py  optimizer_agent.py
src/ad_optimizer/analysis/: __init__.py  metrics.py
src/ad_optimizer/client/: __init__.py  base.py  mock_client.py  models.py  tencent_ads_client.py
src/ad_optimizer/llm/: __init__.py  advisor.py
src/ad_optimizer/strategies/: __init__.py  base.py  budget_reallocation.py  creative_optimization.py  loss_cutting.py
src/ad_optimizer/utils/: logging.py  money.py
tests/: conftest.py  test_agent.py  test_client_mock.py  test_metrics.py  test_strategies.py
